--- a/blocks/element/__container/_like/element__container_like.css
+++ b/blocks/element/__container/_like/element__container_like.css
@@ -1,6 +1,6 @@
 .element__container_like {
     cursor: pointer;
-    background-image: url(./image/like.svg);
+    background-image: url(../../../../image/like.svg);
     width: 22px;
     background-repeat: no-repeat;
     background-position: center;
