--- a/blocks/element/__container/_like/element__container_like-black.css
+++ b/blocks/element/__container/_like/element__container_like-black.css
@@ -1,6 +1,6 @@
 .element__container_like-black {
     cursor: pointer;
-    background-image: url(../../../image/Union.svg);
+    background-image: url(../../../../image/Union.svg);
     width: 22px;
     background-repeat: no-repeat;
     background-position: center;
