--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -3,7 +3,7 @@
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
-    margin-top: 16px
+    margin-top: 16px;
 }
 
 @media screen and (max-width: 660px) {
