--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 660px) {
-    .profile__container_avatar {
+    .profile__container {
         margin: auto;
     }
 }
