--- a/blocks/element/__container-like/element__container-like.css
+++ b/blocks/element/__container-like/element__container-like.css
@@ -1,4 +1,4 @@
-.element__container_like {
+.element__container-like {
     cursor: pointer;
     background-image: url(../../../../image/like.svg);
     width: 22px;
@@ -6,6 +6,6 @@
     background-position: center;
 }
 
-.element__container_like:hover {
+.element__container-like:hover {
     opacity: .5;
 }
