--- a/blocks/element/__container-like/element__container-like.css
+++ b/blocks/element/__container-like/element__container-like.css
@@ -1,6 +1,6 @@
 .element__container-like {
     cursor: pointer;
-    background-image: url(../../../../image/like.svg);
+    background-image: url(../../../image/like.svg);
     width: 22px;
     background-repeat: no-repeat;
     background-position: center;
