--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,6 @@
 .popup__container {
     background: #fff;
-    margin: 195px auto;
+    margin: auto;
     width: 430px;
     transition: 0.5s all;
     border-radius: 10px;
