--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,17 @@
 .popup__input {
     border: none;
     padding: 0;
+    width: 358px;
+    font-size: 14px;
+    line-height: 17px;
+    padding-bottom: 13px;
+    margin: 0 0 30px 36px;
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
+}
+
+@media screen and (max-width: 550px) {
+    .popup__input {
+        width: 238px;
+        margin: 0 0 30px 22px;
+    }
 }
