--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -7,3 +7,9 @@
     margin-top: 51px;
     justify-content: center;
 }
+
+@media screen and (max-width: 320px) {
+    .elements {
+        margin-top: 36px;
+    }
+}
