--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,4 +2,12 @@
     margin: auto;
     max-width: 880px;
     margin-top: 67px;
+    margin-bottom: 60px;
+}
+
+@media screen and (max-width: 320px) {
+    .footer {
+        margin-top: 48px;
+        margin-bottom: 36px;
+    }
 }
