--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -7,3 +7,10 @@
         margin-left: 27px;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .header__logo {
+        width: 103.74px;
+        height: 24.4px;
+    }
+}
