--- a/blocks/popup/__container-input/popup__container-input.css
+++ b/blocks/popup/__container-input/popup__container-input.css
@@ -1,7 +1,7 @@
 .popup__container-input {
     height: 27px;
     margin: 0 36px 30px 36px;
-    border-bottom: grey solid 1.5px;
+    border-bottom: rgba(0, 0, 0, .2) solid 1.5px;
 }
 
 @media screen and (max-width: 550px) {
