--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,7 +1,15 @@
 .popup__title {
-    margin: 34px 64px 54px 36px;
+    margin: 0 64px 54px 36px;
     color: #000000;
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
+}
+
+@media screen and (max-width: 550px) {
+    .popup__title {
+        font-size: 18px;
+        line-height: 22px;
+        margin: 0px 22px 75px 22px;
+    }
 }
