--- a/blocks/popup/_active/popup_active.css
+++ b/blocks/popup/_active/popup_active.css
@@ -1,11 +1,4 @@
 .popup_active {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.5);
     opacity: 1;
-    transition: 0.5s all;
-    margin: auto;
+    pointer-events: all;
 }
