--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,12 +1,13 @@
 .profile__add-button {
     text-decoration: none;
-    background-color: #000000;
+    background-color: Transparent;
     padding: 0;
     margin: auto 0 auto auto;
     cursor: pointer;
-    border: solid 2px grey;
+    border: solid 2px #FFFFFF;
     width: 150px;
     height: 50px;
+    border-radius: 2px;
 }
 
 .profile__add-button:hover {
