--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -4,6 +4,9 @@
     font-size: 18px;
     line-height: 22px;
     margin-top: 16px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 660px) {
@@ -11,6 +14,7 @@
         width: 282px;
         margin: auto;
         text-align: center;
+        margin-top: 14px;
     }
 }
 
