--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -4,6 +4,9 @@
     font-size: 42px;
     line-height: 48px;
     margin-right: 18px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 330px) {
@@ -11,13 +14,5 @@
         font-size: 27px;
         line-height: 33px;
         margin-left: 65px;
-    }
-}
-
-@media screen and (max-width: 550px) {
-    .popup__title {
-        font-size: 18px;
-        line-height: 22px;
-        margin: 25px 22px 75px 22px;
     }
 }
