--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,6 +1,6 @@
 .profile__add-button {
     text-decoration: none;
-    background-color: Transparent;
+    background-color: transparent;
     padding: 0;
     margin: auto 0 auto auto;
     cursor: pointer;
