--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,7 @@
 .profile__edit-button {
     text-decoration: none;
     border: none;
-    background-color: Transparent;
+    background-color: transparent;
     padding: 0;
     cursor: pointer;
     align-self: center;
