--- a/blocks/footer/__title/footer__title.css
+++ b/blocks/footer/__title/footer__title.css
@@ -2,7 +2,7 @@
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
-    color: rgba(84, 84, 84, .7);
+    color: #545454;
     margin: 0;
 }
 
