--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -4,3 +4,9 @@
     flex-wrap: wrap;
     align-self: center;
 }
+
+@media screen and (max-width: 660px) {
+    .profile__info {
+        justify-content: center;
+    }
+}
