--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,5 +1,7 @@
 .element {
     max-width: 282px;
+    height: 361px;
     background-color: #ffffff;
     border-radius: 10px;
+    position: relative;
 }
