--- a/pages/index.css
+++ b/pages/index.css
@@ -27,6 +27,7 @@
 @import url(../blocks/element/__text/element__text.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/element.css);
+@import url(../blocks/element/__delete-image/element__delete-image.css);
 
 /* FOOTER */
 
@@ -52,6 +53,14 @@
 @import url(../blocks/popup/_active/popup_active.css);
 @import url(../blocks/popup/__container-input/popup__container-input.css);
 @import url(../blocks/popup/__button-close/popup__button-close.css);
+@import url(../blocks/popup/__card/popup__card.css);
+@import url(../blocks/popup/__card/_active/_active.css);
+@import url(../blocks/popup/__bg-image/popup__bg-image.css);
+@import url(../blocks/popup/__bg-image/_active/popup__bg-image_active.css);
+@import url(../blocks/popup/__bg/_image/popup__bg_image.css);
+@import url(../blocks/popup/__image/_close/popup__image_close.css);
+@import url(../blocks/popup/popup-bg/__container/popup-bg__container.css);
+@import url(../blocks/popup/__text/popup__text.css);
 
 /* PROFILE */
 
