--- a/blocks/popup/__image/_close/popup__image_close.css
+++ b/blocks/popup/__image/_close/popup__image_close.css
@@ -1,4 +1,4 @@
-.popup-bg__image_close {
+.popup-bg__close {
     background-image: url(../../../../image/CloseIcon.svg);
     border: none;
     background-color: transparent;
@@ -10,13 +10,13 @@
     margin-top: -40px;
 }
 
-.popup-bg__image_close:hover {
+.popup-bg__close:hover {
     opacity: .5;
     cursor: pointer;
 }
 
 @media screen and (max-width: 560px) {
-    .popup-bg__image_close {
+    .popup-bg__close {
         margin-right: 0;
         width: 20px;
         height: 20px;
