--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,5 +1,6 @@
 .elements {
     max-width: 880px;
+    min-height: 50vh;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(282px, 282px));
