--- a/blocks/popup/__container-image/popup__container-image.css
+++ b/blocks/popup/__container-image/popup__container-image.css
@@ -1,4 +1,4 @@
-.popup__container_type_image {
+.popup__container-image {
     text-align: center;
     position: relative;
     width: fit-content;
