--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -9,6 +9,15 @@
     border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
 
+
+/* .popup__input:invalid { */
+
+
+/* border-bottom: 1px solid red; */
+
+
+/* } */
+
 @media screen and (max-width: 550px) {
     .popup__input {
         width: 238px;
