--- a/pages/index.css
+++ b/pages/index.css
@@ -39,15 +39,20 @@
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/header.css);
 
-/* INPUT */
+/* FORM */
 
+@import url(../blocks/form/__field/form__field.css);
+@import url(../blocks/form/__set/form__set.css);
 
 /* POPUP */
 
 @import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__button/_type/_error/popup__button_type_error.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input/_type/_error/popup__input_type_error.css);
+@import url(../blocks/popup/__input/__input-error/_active/popup__input-error_active.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_active/popup_active.css);
