--- a/pages/index.css
+++ b/pages/index.css
@@ -67,6 +67,7 @@
 @import url(../blocks/popup/__container-image/popup__container-image.css);
 @import url(../blocks/popup/__text/popup__text.css);
 @import url(../blocks/popup/__form-set/popup__form-set.css);
+@import url(../blocks/popup/__form-field/popup__form-field.css);
 
 /* PROFILE */
 
