--- a/src/blocks/element/__container-like/_black/element__container-like_black.css
+++ b/src/blocks/element/__container-like/_black/element__container-like_black.css
@@ -1,5 +1,5 @@
 .element__container-like_black {
-    background-image: url(../../../../image/Union.svg);
+    background-image: url(../../../../../image/Union.svg);
 }
 
 .element__container-like_black:hover {
