--- a/src/blocks/element/__delete-image/element__delete-image.css
+++ b/src/blocks/element/__delete-image/element__delete-image.css
@@ -1,5 +1,5 @@
 .element__delete-image {
-    background-image: url(../../../image/delete1.svg);
+    background-image: url(../../../../image/delete1.svg);
     height: 19px;
     width: 18px;
     background-color: transparent;
