--- a/src/blocks/popup/__image/_close/popup__image_close.css
+++ b/src/blocks/popup/__image/_close/popup__image_close.css
@@ -1,5 +1,5 @@
 .popup__close-image {
-    background-image: url(../../../image/CloseIcon.svg);
+    background-image: url(../../../../image/CloseIcon.svg);
     border: none;
     background-color: transparent;
     height: 32px;
